# marl_lib

./: CMakeLists.txt  README.md
include/: marl_dynamicArray.h  marl_lib.h  marl_linkedList.h  marl_list.h  marl_sdl.h  marl_string.h  marl_terminal.h  marl_widget.h  marl_window.h
sandbox/: CMakeLists.txt  main.c
src/util/: marl_list.c  marl_string.c  marl_terminal.c
src/visual/: marl_widget.c  marl_window.c
